test/fixtures/warnings/protocols.txt
protocols.j:7:1: warning: multiple declarations of method 'firstName' found and ignored
- (CPString)firstName;
^
protocols.j:3:1: note: first declaration is here:
- (CPString)firstName;
^
protocols.j:11:1: error: duplicate definiton of protocol 'Person'
@protocol Person
^
protocols.j:1:1: note: previous definition is here
@protocol Person
^
protocols.j:23:27: warning: method 'fullName' in protocol 'Person' not implemented
@implementation Somebody <Person>
                          ^
protocols.j:5:1: note: method 'fullName' declared here
- (CPString)fullName;
^
protocols.j:32:45: error: cannot find protocol declaration for 'Unknown'
@implementation SomeParent <Person, Parent, Unknown>
                                            ^
protocols.j:32:37: warning: method 'adopt:' in protocol 'Parent' not implemented
@implementation SomeParent <Person, Parent, Unknown>
                                    ^
protocols.j:15:1: note: method 'adopt:' declared here
- (void)adopt:(Person)child;
^
protocols.j:32:37: warning: method 'children' in protocol 'Parent' not implemented
@implementation SomeParent <Person, Parent, Unknown>
                                    ^
protocols.j:16:1: note: method 'children' declared here
- (CPArray)children;
^

4 warnings and 2 errors generated.
